@startuml
abstract class dao.Dao {

}

class dao.CustomerDao {

}

class dao.EmployeeDao {

}

class dao.FoodCategoryDao {

}
class dao.FoodItemDao {

}

class dao.OrderDao {

}

class dao.OrderItemDao {

}

class dao.SessionDao {

}

class dao.ShipmentDao {

}

class dao.TableDao {

}

class dao.WorkDayDao {

}

class dao.statistical.StatisticalDao {

}
dao.ShipmentDao --|> dao.Dao
dao.OrderDao --|> dao.Dao
dao.OrderItemDao --|> dao.Dao
dao.WorkDayDao --|> dao.Dao
dao.CustomerDao --|> dao.Dao
dao.EmployeeDao --|> dao.Dao
dao.FoodCategoryDao --|> dao.Dao
dao.FoodItemDao --|> dao.Dao
dao.SessionDao --|> dao.Dao
dao.TableDao --|> dao.Dao

dao.FoodItemDao o-- dao.FoodCategoryDao
dao.OrderDao o-- dao.EmployeeDao
dao.OrderDao o-- dao.TableDao
dao.OrderDao o-- dao.CustomerDao
dao.OrderItemDao o-- dao.FoodItemDao
dao.OrderItemDao o-- dao.OrderDao
dao.SessionDao o-- dao.EmployeeDao
dao.ShipmentDao o-- dao.CustomerDao
dao.ShipmentDao o-- dao.OrderDao
dao.ShipmentDao o-- dao.EmployeeDao
dao.statistical.StatisticalDao o-- dao.EmployeeDao

dao.statistical.StatisticalDao ..> models.statistical.EmployeeIncome
dao.statistical.StatisticalDao ..> models.statistical.EmployeeSalary
dao.statistical.StatisticalDao ..> models.statistical.ProductIncome
dao.statistical.StatisticalDao ..> models.statistical.WorkingDay
dao.statistical.StatisticalDao o-- utils.DatabaseConnector
dao.statistical.StatisticalDao ..> utils.OrderStatus
@enduml